avancement remise a jour

--- a/angular.json
+++ b/angular.json
@@ -103,6 +103,37 @@
             ],
             "scripts": []
           }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "l3m-tpX-todolist-angular-y2022:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "l3m-tpX-todolist-angular-y2022:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "l3m-tpX-todolist-angular-y2022:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "l3m-tpX-todolist-angular-y2022:serve:production"
+            }
+          }
         }
       }
     }
