--- a/angular.json
+++ b/angular.json
@@ -134,6 +134,16 @@
               "devServerTarget": "l3m-tpX-todolist-angular-y2022:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "l3m-tpX-todolist-angular-y2022:build:production",
+            "firebaseProject": "angular-efea0",
+            "firebaseHostingSite": "angular-efea0"
+          }
         }
       }
     }
